--- a/src/exercise/02.html
+++ b/src/exercise/02.html
@@ -2,6 +2,8 @@
 <!-- http://localhost:3000/isolated/exercise/02.html -->
 
 <body>
+  <script src="https://unpkg.com/react@17.0.0/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@17.0.0/umd/react-dom.development.js"></script>
   <div id="root"></div>
 
   <!-- 🐨 add React and ReactDOM on the page.
@@ -16,14 +18,50 @@
     // You're going to re-implement this code using React!
     // 💣 So go ahead and delete this implementation (or comment it out for now)
     // These three lines are similar to React.createElement
-    const element = document.createElement('div')
-    element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
-    element.className = 'container' // 💰 in React, this is also called the "className" prop
+    // const element = document.createElement('div')
+    // element.textContent = 'Hello World' // 💰 in React, you set this with the "children" prop
+    // element.className = 'container' // 💰 in React, this is also called the "className" prop
     // This is similar to ReactDOM.render
-    rootElement.append(element)
+    // rootElement.append(element)
 
     // 🐨 Please re-implement the regular document.createElement code above
     // with these React API calls
     // 💰 The example in the markdown file should be a good hint for you.
+
+
+    // const container = document.createElement("div");
+    // container.className = "container";
+    //
+    // rootElement.appendChild(container);
+    //
+    // const helloElementProps = {id: 'element-id-hello', children: "Hello " };
+    // const helloElementType = 'span';
+    //
+    // const reactHelloElement = React.createElement(helloElementType, helloElementProps)
+    // // ReactDOM.render(reactElement, rootElement)
+    //
+    // const worldElementProps = {id: 'element-id-world', children: "World" };
+    // const worldElementType = 'span';
+    //
+    // const reactWorldElement = React.createElement(worldElementType, worldElementProps);
+    //
+    // // const reactElement2 = React.createElement(containerType, containerProps);
+    // ReactDOM.render([reactHelloElement, reactWorldElement], container);
+
+    const root = document.getElementById('root');
+
+    const helloElement = React.createElement('span', {children: 'Hello'});
+    const worldElement = React.createElement('span', {children: 'World'});
+
+    const reactElement = React.createElement('div', {
+              id: 'container'
+            }, [
+              helloElement,
+              ' ',
+              worldElement,
+            ]);
+
+    ReactDOM.render(reactElement, root);
+
   </script>
 </body>
